copyRight added now

--- a/PortFolioApp/index.html
+++ b/PortFolioApp/index.html
@@ -145,6 +145,15 @@
           <a href="mailto:Bitf21m039@pucit.edu.pk"><button>Email Me</button></a> 
     </div>
     
+
+    <!-- footer -->
+
+    <div class="footer">
+    copyright © 2023.All right reserved
+    </div>
+
+
+
 <script src="App.js"></script>
 </body>
 </html>
